# play-with-embedding-system

./: Makefile  embeddingservice.proto  embeddingservice_pb2.py  embeddingservice_pb2_grpc.py  envexample  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: main.py
app/embedding/: vectorizer.py
app/utils/: config.py
app/vectorDB/: weaviateVdb.py
test/: client.py
